# Personal-KB

./: .gitignore  README.md  pyproject.toml
src/personal_kb/: llm.py  main.py  models.py  notes.py  parsers.py
