[tool.poetry]
name = "personal-kb"
version = "0.1.0"
description = ""
authors = ["Sam van der Voort <sam.van.der.voort@postnl.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
